# stt-evals

./: .env.azure.example  .env.example  .env.github.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/acl/: access.yml
.github/chatmodes/: adr.chatmode.md  plan.chatmode.md  sovereignty-advisor.chatmode.md  system-design.chatmode.md  terraform.chatmode.md
.github/compliance/: inventory.yml
.github/policies/: jit.yml
.github/templates/: sovereignty-constitution.md  system-design-template.md
.github/workflows/: ci.yml  integration-tests.yml  sovereignty-compliance-check.yml  terraform-deploy.yml  terraform-force-unlock.yml  terraform-plan.yml
docs/adrs/: 001-evals.md  002-github-actions-cicd-pipeline.md
eval/: .env.example  README.md  __init__.py  config.py  dataset_manager.py  main.py  rubric_scorer.py
eval/datasets/: __init__.py  config.py  downloader.py
eval/datasets/diarization/: 100_ground_truth_combined.rttm  100_predictions_combined.rttm  ground_truth_combined.rttm  p_kbkon.rttm  predictions_combined.rttm  predictions_fast_combined.rttm
eval/datasets/stt/: hypotheses.txt  references.txt
eval/diarization/: __init__.py  main.py
eval/diarization/sample_datasets/: README.md  arabic_diarization_hypothesis.rttm  arabic_diarization_reference.rttm  diarization_dataset_schema.json  diarization_validation.jsonl  english_diarization_hypothesis.rttm  english_diarization_reference.rttm
eval/eval_logger/: __init__.py  integration.py  main.py
eval/icd_coding_2/: __init__.py  eval_synth_ehr.py
eval/image_extraction/: __init__.py  run_eval.py  test_cases.jsonl
eval/models/: __init__.py  evaluation_results.py
eval/rag/: README.md  __init__.py  main.py  main_new.py  main_old.py
eval/rag/test_summaries/: generated.jsonl  ground_truth.jsonl
eval/results/cache_fix_verification/: rag_evaluation_results.json
eval/results/diarization-evals-test1/: diarization_evaluation_results.json
eval/results/diarization_eval_100_samples/: diarization_evaluation_results.json
eval/results/diarization_evaluation_stt_service/: diarization_evaluation_results.json
eval/results/diarization_evaluation_tests/: diarization_evaluation_results.json
eval/results/diarization_final_test/: diarization_evaluation_results.json
eval/results/diarization_final_test2/: diarization_evaluation_results.json
eval/results/diarization_metrics_all/: diarization_evaluation_results.json
eval/results/diarization_ser_ber_final/: diarization_evaluation_results.json
eval/results/diarization_ser_ber_fixed/: diarization_evaluation_results.json
eval/results/diarization_ser_debug/: diarization_evaluation_results.json
eval/results/icd_coding_2/: eval_progress_20251209_103544.json  eval_results_20251209_103544.json  eval_summary_20251209_103544.txt
eval/results/rag-summary-evaluation/: rag_evaluation_results.json
eval/results/rag-summary-evaluation-debug/: rag_evaluation_results.json
eval/results/rag-summary-evaluation-fixed/: rag_evaluation_results.json
eval/results/rag_20251114_071709/: rag_evaluation_results.json
eval/results/rag_summarization_test/: rag_evaluation_results.json
eval/results/stt_20251113_071848/: stt_evaluation_results.json
eval/results/stt_20251113_073256/: stt_evaluation_results.json
eval/results/stt_20251117_065224/: stt_evaluation_results.json
eval/results/stt_results_sample/: stt_evaluation_results.json
eval/stt/: __init__.py  main.py
eval/stt/sample_datasets/: arabic_stt_validation.jsonl  english_stt_validation.jsonl  stt_dataset_schema.json
eval/test notebooks/: evals_azureml_test.ipynb  evals_test.ipynb  evals_test1.ipynb
eval/test notebooks/results/: stt_evaluation_results.json
results/: simple_stt_results.json
tests/: conftest.py
tests/eval/rag/: .env.example  .gitignore  QUICKSTART.md  README.md  __init__.py  run_rag_eval.py  test_ragas.py  test_ragas.sh
tests/eval/rag/data/ahqad/: answers.jsonl  corpus.jsonl  metadata.json  qrels.jsonl  queries.jsonl
tests/eval/rag/scripts/: prepare_ahqad.py
